<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/furniture_main" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_about_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_for_title"
                        android:text="@string/about_us"
                        android:textColor="@color/color_grey"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_about_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/padding_for_title"
                        android:paddingRight="@dimen/padding_for_title"
                        android:paddingStart="@dimen/padding_for_title"
                        android:text="@string/about_us_desc"
                        android:textSize="@dimen/text_size_15_sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="@dimen/padding_for_title"
                        android:layout_marginRight="@dimen/padding_for_title"
                        android:layout_marginTop="@dimen/padding_for_title"
                        android:background="@color/color_grey"
                        android:paddingStart="@dimen/padding_for_title" />

                    <TextView
                        android:id="@+id/text_address_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_for_title"
                        android:text="@string/address"
                        android:textColor="@color/color_grey"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="map"
                        android:paddingLeft="@dimen/padding_for_title"
                        android:paddingRight="@dimen/padding_for_title"
                        android:paddingStart="@dimen/padding_for_title"
                        android:text="@string/complete_address"
                        android:textSize="@dimen/text_size_15_sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="@dimen/padding_for_title"
                        android:layout_marginRight="@dimen/padding_for_title"
                        android:layout_marginTop="@dimen/padding_for_title"
                        android:background="@color/color_grey"
                        android:paddingStart="@dimen/padding_for_title" />

                    <TextView
                        android:id="@+id/text_timings_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_for_title"
                        android:text="@string/timings"
                        android:textColor="@color/color_grey"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_timings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink=""
                        android:paddingLeft="@dimen/padding_for_title"
                        android:paddingRight="@dimen/padding_for_title"
                        android:paddingStart="@dimen/padding_for_title"
                        android:text="@string/_9_30_am_10_00_pm"
                        android:textSize="@dimen/text_size_15_sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="@dimen/padding_for_title"
                        android:layout_marginRight="@dimen/padding_for_title"
                        android:layout_marginTop="@dimen/padding_for_title"
                        android:background="@color/color_grey"
                        android:paddingStart="@dimen/padding_for_title" />

                    <TextView
                        android:id="@+id/text_phone_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_for_title"
                        android:text="@string/contact_us"
                        android:textColor="@color/color_grey"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/padding_for_title"
                        android:autoLink="phone"
                        android:drawablePadding="20dp"
                        android:paddingLeft="@dimen/padding_for_title"
                        android:paddingRight="@dimen/padding_for_title"
                        android:paddingStart="@dimen/padding_for_title"
                        android:text="@string/_91_9876543210"
                        android:textSize="@dimen/text_size_15_sp" />

                    <TextView
                        android:id="@+id/text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/padding_for_title"
                        android:autoLink="email"
                        android:drawablePadding="20dp"
                        android:paddingLeft="@dimen/padding_for_title"
                        android:paddingRight="@dimen/padding_for_title"
                        android:paddingStart="@dimen/padding_for_title"
                        android:text="@string/demo_lorem_com"
                        android:textSize="@dimen/text_size_15_sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_10">

                <ImageView
                    android:id="@+id/image_fb"
                    android:layout_width="@dimen/social_icon_size"
                    android:layout_height="@dimen/social_icon_size"
                    app:srcCompat="@drawable/ic_facebook" />

                <ImageView
                    android:id="@+id/image_twitter"
                    android:layout_width="@dimen/social_icon_size"
                    android:layout_height="@dimen/social_icon_size"
                    android:layout_marginLeft="@dimen/margin_20"
                    app:srcCompat="@drawable/ic_twitter" />
            </LinearLayout>
            <TextView
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/credits"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>